casi d'uso, DCD, ripristino pagina accesso

--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -75,7 +75,7 @@
                         <a class="page-scroll" href="/user/artisti">Artists</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/citazioni">Quotes</a>
+                        <a class="page-scroll" href="/quotes">Quotes</a>
                     </li>
                      
                     <li>
