sistemato logout, rimpostazione css pagine

--- a/galleria/src/main/resources/copie/artista/resultsArtista.html
+++ b/galleria/src/main/resources/copie/artista/resultsArtista.html
@@ -118,11 +118,8 @@
 
 			</ul>
 			</table>
-			<br><br></br></br>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="pager">
- 							<li class="previous"><a href="/artista">Ritorna indietro</a></li>
-							</ul>
+			<br><br>
+			<a href="/admin/artista">Ritorna indietro</a>
 			</div>
 			
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -130,9 +127,9 @@
  							<li class="previous"><a href="/">Home</a></li>
 							</ul>
 			</div>
-	<br><br></br></br><br></br><br></br><br></br><br><br></br></br><br></br><br></br><br></br>
+	<br><br>
         </div>
-      </div>  
+       
      <div class="footer">
 		<div class="overlayer">
 			<div class="container">
