--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -77,7 +77,9 @@
                     <li>
                         <a class="page-scroll" href="/quotes">Quotes</a>
                     </li>
-                     
+                    <li>
+                        <a class="page-scroll" href="/contacts">Contacts</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="/user/opere">Works of art</a>
                     </li>
