--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
 
 <div class="topnav">
   <a class="active" href="/">Home</a>
-  <a href="#news">News</a>
+  <a href="/news">News</a>
   <a href="/contacts">Contact</a>
   <a href="/user/artisti">Artists</a>
   <a href="/user/opere">Work of art</a>
