tentativo di sistemare i menu con un menu uniforme, abilitare i collegamenti

--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<style>
-
-</style>
 <link rel="stylesheet" href="css/index.css" />
     <title></title>
 </head>
@@ -14,10 +11,10 @@
   <a href="/news">News</a>
   <a href="/contacts">Contact</a>
   <a href="/user/artisti">Artists</a>
-  <a href="/user/opere">Work of art</a>
+  <a href="/user/opere">Works of art</a>
   <a href="/accedi">Register here</a>
   <a href="/accedi">Login/Logout</a>
-  <a href="/accedi_admin">Admin</a>
+  <a href="/accedi_admin">Administrator</a>
 </div>
 
   <div class="container">
