--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -1,27 +1,52 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<link rel="stylesheet" href="css/index.css" />
-    <title></title>
-</head>
-<body text="white">
-
-<div class="topnav">
-  <a class="active" href="/">Home</a>
-  <a href="/news">News</a>
-  <a href="/contacts">Contact</a>
-  <a href="/user/artisti">Artists</a>
-  <a href="/user/opere">Works of art</a>
-  <a href="/accedi">Register here</a>
-  <a href="/accedi">Login/Logout</a>
-  <a href="/accedi_admin">Administrator</a>
-</div>
-
-  <div class="container">
-    <header>
-      <h1><span>Art Gallery</span></h1>
-  </header>
-</div>
-</body>
+<html>
+  <head>
+  
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/index.css" />
+  <title>Art gallery</title>
+  </head>
+  <body text="white">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="/">Art gallery</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/news">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contacts">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/artisti">Artists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/opere">Works of art</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/accedi">Register here</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/accedi">Login/Logout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/accedi_admin">Administrator</a>
+          </li>
+        </ul>
+        <!-- <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+        </form> -->
+      </div>
+    </nav>
+  </body>
 </html>
-
